[gd_scene load_steps=2 format=3 uid="uid://bvn8x7y203a1c"]

[ext_resource type="Script" uid="uid://cva3h0p87g350" path="res://scripts/ui/GarageComputerUI.gd" id="1"]

[node name="GarageComputerUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -230.0
offset_right = 22.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ordinateur du Garage"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Slots disponibles:"

[node name="SlotList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CarLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Voitures en attente:"

[node name="CarList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Ajouter la voiture au slot"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PrÃªt"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
